tests/baselines/reference/mappedTypeNoTypeNoCrash.errors.txt
mappedTypeNoTypeNoCrash.ts(1,51): error TS2304: Cannot find name 'K'.
mappedTypeNoTypeNoCrash.ts(1,57): error TS2304: Cannot find name 'K'.


==== mappedTypeNoTypeNoCrash.ts (2 errors) ====
    type T0<T> = ({[K in keyof T]}) extends ({[key in K]: T[K]}) ? number : never;
                                                      ~
!!! error TS2304: Cannot find name 'K'.
                                                            ~
!!! error TS2304: Cannot find name 'K'.